--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "copy-to-clipboard": "^3.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
